force-app/main/default/objects/Survey_Question__c/fields/Questions_Id__c.field-meta.xml
<CustomField>
    <fullName>Questions_Id__c</fullName>
    <label>Questions</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>Survey_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>